<resources>
    <string name="app_name">Solidariedade Diária</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Carteira</string>
    <string name="institution">Instituições</string>
    <string name="movements">Movimentos</string>
    <string name="user_info">Perfil</string>
    <string name="others">Outros</string>
    <string name="support">Acerca da aplicação</string>
    <string name="email">Email</string>
    <string name="user_email_var">%s</string>
    <string name="password">Palavra-passe</string>
    <string name="login">Entrar</string>
    <string name="sign_up_string">Ainda não possui conta? <b>Registe-se</b></string>
    <string name="have_account">Já possui uma conta? <b>Login</b></string>
    <string name="name">Nome</string>
    <string name="register">Registar</string>
    <string name="logout">Sair da Conta</string>
    <string name="desbloquear">Desbloquear</string>
    <string name="enviar_dinheiro">Enviar dinheiro</string>
    <string name="atualizarperfil">Atualizar perfil</string>
    <string name="institution1">O Século</string>
    <string name="institution2">Acreditar</string>
    <string name="institution3">Banco Alimentar</string>
    <string name="institution4">CADIn</string>
    <string name="description1">  A Fundação “O Século” foi criada em 1998 com o objetivo de continuar a obra social da antiga Colónia Balnear Infantil “O Século”, criada em 1927, por João Pereira da Rosa, o então diretor do Jornal “O Século”.
        \n \n  A Fundação “O Século” tem como missão promover e contribuir para a criação de condições e oportunidades, que possibilitem não só o desenvolvimento sócio cultural de crianças, como a assistência social a idosos e pessoas menos favorecidas ou em risco social.
        \n \n  Atualmente, todos os dias, a Fundação “O Século” apoia cerca de 800 pessoas: são crianças, idosos e famílias carenciadas que beneficiam da ajuda, através da intervenção da Fundação em diferentes áreas sociais.</string>
    <string name="description2">  A Associação de Pais e Amigos de Crianças com Cancro é uma rede de partilha e de afectos feita de crianças, jovens, pais e amigos.
        \n \n  Criada em 1994 para enfrentar da melhor maneira as dinâmicas que o cancro infantil impõe, tentando proporcionar a todos a certeza de apoio num momento de incertezas.
        \n \n  Acompanham em todos os momentos da doença. Nas Casas da Acreditar, nos hospitais ou no domicílio, o seu apoio desdobra-se nos planos emocional, logístico, social ou outro que as famílias necessitem. Com a transparência, o profissionalismo, o coração e sobretudo a experiência de quem já passou pelo mesmo.</string>
    <string name="description3">  Os Bancos Alimentares, criados em 1991, são Instituições Particulares de Solidariedade Social que lutam contra o desperdício de produtos alimentares, encaminhando-os para distribuição gratuita às pessoas carenciadas.
        \n \n  O seu objetivo é evitar o desperdício de alimentos fazendo-os chegar às pessoas que têm fome. O Banco Alimentar recebe toda a qualidade de géneros alimentares, ofertas de empresas e particulares, em muitos casos excedentes de produção da indústria agroalimentar, excedentes agrícolas, da grande distribuição e ainda, produtos de intervenção da União Europeia.
        \n \n  Os Bancos Alimentares em actividade recolhem e distribuem várias dezenas de milhares de toneladas de produtos e apoiam ao longo de todo o ano, a ação de instituições em Portugal. Por sua vez, estas distribuem refeições confecionadas e cabazes de alimentos a pessoas comprovadamente carenciadas, abrangendo já a distribuição total mais de 390.000 pessoas.
        </string>
    <string name="description4">  Criado em 2003, o CADIn é uma IPSS - Instituição Particular de Solidariedade Social pioneira na sua intervenção. Foi o primeiro centro em Portugal dedicado ao tratamento e estudo das perturbações do neurodesenvolvimento.
\n \n  As famílias encontram no CADIn uma equipa de profissionais especializados no diagnóstico e tratamento das perturbações do neurodesenvolvimento, que acredita que cada pessoa tem direito aos melhores cuidados para poder realizar todo o seu potencial, em quaisquer circunstâncias e estágios de vida.</string>
    <string name="random_sentences">Boa-Ação diária</string>
    <string name="random_sentences_button">Próxima Boa-Ação</string>
    <string name="password_validation">A palavra-passe deve ser composta por pelo menos 8 caracteres, contendo obrigatoriamente letras do alfabeto e números </string>
    <string name="boa_ação_introduction"> Esta area é dedicada à Boa-Ação diária! Aqui pode obter sugestões de boas-ações para serem cumpridas no seu dia-a-dia de forma a tornar-se uma pessoa mais solidária! Assim que a boa-ação proposta seja cumprida, clique no botão "Próxima Boa-Ação" para obter uma nova! São 50 boas-ações. Boa sorte! </string>
    <string name="acerca_de">A aplicação <i>Solidariedade Diária</i> pretende proporcionar aos seus utilizadores informações e ferramentas necessárias para poder ajudar diversas instituições, tanto monetariamente como gratuitamente, sem fins lucrativos. \n \nOs utilizadores da aplicação podem obter informações sobre cada instituição de solidariedade presente na aplicação, de modo a elegerem a instituição de solidariedade mais adequada para fazerem o seu donativo. \n \nA aplicação proporciona também uma funcionalidade que permite aos utilizadores angariarem dinheiro através da visualização de anúncios. Esse dinheiro angariado é imediatamente disponibilizado aos utilizadores para contribuições monetárias exclusivamente às instituições presentes na aplicação.
\n \nEsta aplicação foi desenvolvida com recurso à linguagem de programação Java, através do IDE Android Studio, estando conectada a um servidor da empresa webhostapp através de PHP com uma base de dados SQL.
</string>
</resources>
